--- a/RVTL/src/main/resources/R/inst/vtlStudio2/index.html
+++ b/RVTL/src/main/resources/R/inst/vtlStudio2/index.html
@@ -1,67 +1,75 @@
-<div>
-	<select onchange="vtl.editor.setTheme(value)" id="select">
-		<option selected="">default</option>
-		<option>3024-day</option>
-		<option>3024-night</option>
-		<option>abcdef</option>
-		<option>ambiance</option>
-		<option>base16-dark</option>
-		<option>base16-light</option>
-		<option>bespin</option>
-		<option>blackboard</option>
-		<option>cobalt</option>
-		<option>colorforth</option>
-		<option>darcula</option>
-		<option>dracula</option>
-		<option>duotone-dark</option>
-		<option>duotone-light</option>
-		<option>eclipse</option>
-		<option>elegant</option>
-		<option>erlang-dark</option>
-		<option>gruvbox-dark</option>
-		<option>hopscotch</option>
-		<option>icecoder</option>
-		<option>idea</option>
-		<option>isotope</option>
-		<option>lesser-dark</option>
-		<option>liquibyte</option>
-		<option>lucario</option>
-		<option>material</option>
-		<option>material-darker</option>
-		<option>material-palenight</option>
-		<option>material-ocean</option>
-		<option>mbo</option>
-		<option>mdn-like</option>
-		<option>midnight</option>
-		<option>monokai</option>
-		<option>moxer</option>
-		<option>neat</option>
-		<option>neo</option>
-		<option>night</option>
-		<option>nord</option>
-		<option>oceanic-next</option>
-		<option>panda-syntax</option>
-		<option>paraiso-dark</option>
-		<option>paraiso-light</option>
-		<option>pastel-on-dark</option>
-		<option>railscasts</option>
-		<option>rubyblue</option>
-		<option>seti</option>
-		<option>shadowfox</option>
-		<option>solarized dark</option>
-		<option>solarized light</option>
-		<option>the-matrix</option>
-		<option>tomorrow-night-bright</option>
-		<option>tomorrow-night-eighties</option>
-		<option>ttcn</option>
-		<option>twilight</option>
-		<option>vibrant-ink</option>
-		<option>xq-dark</option>
-		<option>xq-light</option>
-		<option>yeti</option>
-		<option>yonce</option>
-		<option>zenburn</option>
-	</select>
-	<input id="fontsize" value="12" onkeyup="if (value > 8 &amp;&amp; value < 40) document.getElementsByClassName('CodeMirror')[0].style.fontSize = value + 'pt'">
+<div class="vtltoolbar">
+    <select onchange="vtl.editor.setTheme(value)" id="select">
+        <option selected="">default</option>
+        <option>3024-day</option>
+        <option>3024-night</option>
+        <option>abcdef</option>
+        <option>ambiance</option>
+        <option>base16-dark</option>
+        <option>base16-light</option>
+        <option>bespin</option>
+        <option>blackboard</option>
+        <option>cobalt</option>
+        <option>colorforth</option>
+        <option>darcula</option>
+        <option>dracula</option>
+        <option>duotone-dark</option>
+        <option>duotone-light</option>
+        <option>eclipse</option>
+        <option>elegant</option>
+        <option>erlang-dark</option>
+        <option>gruvbox-dark</option>
+        <option>hopscotch</option>
+        <option>icecoder</option>
+        <option>idea</option>
+        <option>isotope</option>
+        <option>lesser-dark</option>
+        <option>liquibyte</option>
+        <option>lucario</option>
+        <option>material</option>
+        <option>material-darker</option>
+        <option>material-palenight</option>
+        <option>material-ocean</option>
+        <option>mbo</option>
+        <option>mdn-like</option>
+        <option>midnight</option>
+        <option>monokai</option>
+        <option>moxer</option>
+        <option>neat</option>
+        <option>neo</option>
+        <option>night</option>
+        <option>nord</option>
+        <option>oceanic-next</option>
+        <option>panda-syntax</option>
+        <option>paraiso-dark</option>
+        <option>paraiso-light</option>
+        <option>pastel-on-dark</option>
+        <option>railscasts</option>
+        <option>rubyblue</option>
+        <option>seti</option>
+        <option>shadowfox</option>
+        <option>solarized dark</option>
+        <option>solarized light</option>
+        <option>the-matrix</option>
+        <option>tomorrow-night-bright</option>
+        <option>tomorrow-night-eighties</option>
+        <option>ttcn</option>
+        <option>twilight</option>
+        <option>vibrant-ink</option>
+        <option>xq-dark</option>
+        <option>xq-light</option>
+        <option>yeti</option>
+        <option>yonce</option>
+        <option>zenburn</option>
+    </select>
+    <input id="fontsize" value="12" onkeyup="if (value > 8 &amp;&amp; value < 40) document.getElementsByClassName('CodeMirror')[0].style.fontSize = value + 'pt'">
 </div>
-<div id="vtlwell"></div>
+<div id="vtlwell" style="flex: 1 1 auto"></div>
+<script src="bundle.js" type="text/javascript"></script>
+<script src="main.js" type="text/javascript"></script>
+<script src="closebrackets.js" type="text/javascript"></script>
+<script src="dialog.js" type="text/javascript"></script>
+<script src="matchesonscrollbar.js" type="text/javascript"></script>
+<script src="search.js" type="text/javascript"></script>
+<script src="show-hint.js" type="text/javascript"></script>
+<script src="simplescrollbars.js" type="text/javascript"></script>
