Integrated VTL editor into RVTL

--- a/vtl-bundles/vtl-r/vtl-editor/src/main/resources/test.html
+++ b/vtl-bundles/vtl-r/vtl-editor/src/main/resources/test.html
@@ -25,7 +25,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>HTML5 Boilerplate</title>
+	<title>VTL Editor test page</title>
 	<script src="bundle.js"></script>
 </head>
 
